--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "android:reset-cache": "cd android && ./gradlew clean && cd .. && watchman watch-del-all && rm -rf node_modules/ && npm install"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
-    "react": "18.1.0",
-    "react-native": "0.70.1",
-    "react-native-gesture-handler": "^2.6.1",
-    "react-native-loading-view": "^1.0.1",
+    "react": "17.0.2",
+    "react-native": "0.68.3",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
-    "react-native-vision-camera": "^2.14.1"
+    "react-native-vision-camera": "^2.14.1",
+    "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -29,8 +28,8 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.72.1",
-    "react-test-renderer": "18.1.0"
+    "metro-react-native-babel-preset": "^0.67.0",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
