--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "android:reset-cache": "cd android && ./gradlew clean && cd .. && watchman watch-del-all && rm -rf node_modules/ && npm install"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.6.0",
+    "@react-native-firebase/firestore": "^15.6.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "firebase": "^9.10.0",
     "react": "17.0.2",
     "react-native": "0.68.3",
     "react-native-reanimated": "^2.10.0",
