--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "android:reset-cache": "cd android && ./gradlew clean && cd .. && watchman watch-del-all && rm -rf node_modules/ && npm install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-firebase/app": "^15.6.0",
     "@react-native-firebase/firestore": "^15.6.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
