--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.10.0",
     "react": "17.0.2",
     "react-native": "0.68.3",
+    "react-native-paper": "^5.0.0-rc.10",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
