--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-settings-screen": "^2.2.1",
+    "react-native-svg": "^13.6.0",
     "react-native-vision-camera": "^2.14.1",
     "vision-camera-code-scanner": "^0.2.0"
   },
