--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "firebase": "^9.10.0",
     "react": "17.0.2",
     "react-native": "0.68.3",
+    "react-native-barcode-mask": "^1.2.4",
+    "react-native-hole-view": "^2.1.2",
     "react-native-paper": "^5.0.0-rc.10",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.4",
@@ -26,6 +28,7 @@
     "react-native-settings-screen": "^2.2.1",
     "react-native-svg": "^13.6.0",
     "react-native-vision-camera": "^2.14.1",
+    "rn-responsive-screen": "^1.1.9",
     "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
